# agience-prism

./: .gitignore  Dockerfile  Dockerfile.gpu  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
.scripts/: build.ps1
src/agience_prism/: __init__.py  __main__.py  app.py
